2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint:
 - Find all headers, including in subdirectories, but skip directories.
 - Make script fail on error.
 - Use $() instead of ``.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, test/unit/test_escape.cxx:
 - New unesc_raw() function: un-escapes binary data.
 - Fixes #277.  Thanks Markus Parker.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_subtransaction.cxx:
 - Reproduce #271: subtransaction does not roll back implicitly.
 - Test subtransaction's commit behaviour more systematically.
 src/subtransaction.cxx:
 - Call End() from destructor.  Fixes #271.  Thanks harmic.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test069.cxx:
 - Fix spurious failure; sometimes the number of tables seems to change.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint, tools/splitconfig, tools/template2mak.py:
 - Check for, and fix, Python lint.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/notify-listen,
 include/pqxx/notify-listen.hxx, include/pqxx/pqxx,
 src/Makefile.am, src/notify-listen.cxx:
 - Remove deprecated notify_listener class.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger, include/pqxx/trigger.hxx:
 - Remove deprecated trigger class.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - Remove deprecated escape_binary functions.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Remove an internal level of indirection that was no longer needed.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract-version:
 - Replace obsolete sed -E option.  Fixes #265.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/row.hxx:
 - Document slowness of indexing fields by name.
 - Fixes #274.  Thanks redrett.